resume for remove

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 			<div class="foliox_tm_resume">
 				<div class="container">
 					<div class="foliox_tm_main_title">
-						<span>Resume</span>
+						<span></span>
 						<h3>Education</h3>
 						<div class="title">
 						</div>
